--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Controller.MainActivity">
+    tools:context=".MainActivity">
     <item
         android:id="@+id/menu_settings"
         android:orderInCategory="100"
@@ -14,9 +14,10 @@
         android:title="@string/logIn"
         app:showAsAction="never" />
     <item
-        android:id="@+id/menu_myOrder"
+        android:id="@+id/menu_addMeeting"
+        android:icon="@drawable/chef"
         android:orderInCategory="100"
-        android:title="@string/myOrder"
+        android:title="@string/addMeeting"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_myBooking"
