--- a/app/src/main/res/layout/activity_meeting.xml
+++ b/app/src/main/res/layout/activity_meeting.xml
@@ -11,179 +11,9 @@
     android:weightSum="1"
     tools:context="miteat.miteat.MeetingActivity">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="number of participants:"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/numberParticipants"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:inputType="number" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/kind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="which food:"
-            android:textSize="20dp" />
-
-        <AutoCompleteTextView
-            android:id="@+id/foodPortions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:hint="enter">
-            <requestFocus />
-        </AutoCompleteTextView>
-
-    </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/menuButton"
-        android:layout_width="139dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.41" />
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.16"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="cost per participant: "
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/numberOfMoney"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:inputType="number" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/location"
-            android:layout_width="158dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:background="@drawable/map" />
-
-        <CheckBox
-            android:id="@+id/safe"
-            android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:layout_weight="1"
-            android:text="safe mode?" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.26"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textStartTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoText="false"
-            android:text="in date:"
-            android:textSize="20dp" />
-
-        <miteat.miteat.DateEditText
-            android:id="@+id/startDateEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:editable="true"
-            android:ems="10"
-            android:inputType="date" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0.19"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoText="false"
-            android:text="start in:"
-            android:textSize="20dp" />
-
-        <miteat.miteat.TimeEditText
-            android:id="@+id/startTimeEditText"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:editable="true"
-            android:ems="10"
-            android:inputType="time" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="Cancel" />
-
-        <Button
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="Save" />
-
-
-    </LinearLayout>
-
+        android:layout_height="match_parent"
+        android:id="@+id/meeting_main">
+    </FrameLayout>
 </LinearLayout>
