--- a/app/src/main/res/layout/menu_portions_fragment.xml
+++ b/app/src/main/res/layout/menu_portions_fragment.xml
@@ -21,6 +21,7 @@
             android:textSize="20dp" />
 
         <EditText
+
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/name"
             android:layout_width="match_parent"
@@ -38,7 +39,7 @@
             android:id="@+id/textNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="portions number:"
+            android:text="dish number:"
             android:textSize="20dp" />
 
         <EditText
