--- a/app/src/main/res/layout/menu_list_fragment.xml
+++ b/app/src/main/res/layout/menu_list_fragment.xml
@@ -9,5 +9,12 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
+    <TextView
+        android:id="@android:id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="empty list"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
