--- a/app/src/main/res/layout/menu_portions_fragment_in_list.xml
+++ b/app/src/main/res/layout/menu_portions_fragment_in_list.xml
@@ -1,15 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="251dp"
-        android:layout_height="37dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="first"
-        android:id="@+id/costf" />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/chef" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="251dp"
+            android:layout_height="37dp"
+            android:text="no name"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/numberOfDish"
+            android:layout_width="251dp"
+            android:layout_height="37dp"
+            android:text="dish"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
 
 
 </LinearLayout>
