--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
     <item
+        android:id="@+id/search"
+        android:orderInCategory="100"
+        android:title="@string/search"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/menu_settings"
         android:orderInCategory="100"
         android:title="@string/settings"
@@ -12,6 +17,11 @@
         android:id="@+id/menu_logIn"
         android:orderInCategory="100"
         android:title="@string/logIn"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_my_Meeting"
+        android:orderInCategory="100"
+        android:title="@string/my_meeting"
         app:showAsAction="never" />
     <item
         android:id="@+id/menu_addMeeting"
