--- a/app/src/main/res/layout/main_meeting_fragment.xml
+++ b/app/src/main/res/layout/main_meeting_fragment.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:ems="10"
+            android:text="1"
             android:inputType="number" />
 
     </LinearLayout>
@@ -104,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:ems="10"
+            android:text="0"
             android:inputType="number" />
 
     </LinearLayout>
