--- a/app/src/main/res/layout/menu_portions_fragment.xml
+++ b/app/src/main/res/layout/menu_portions_fragment.xml
@@ -120,11 +120,15 @@
 
     </LinearLayout>
 
+
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="53dp"
         android:orientation="horizontal"
         android:layout_weight="1.05">
+
+
 
         <HorizontalScrollView
             android:layout_width="wrap_content"
@@ -140,7 +144,11 @@
 
             </LinearLayout>
         </HorizontalScrollView>
-
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rowImageProgressBar"
+            android:visibility="gone"/>
 
 
 
