--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -14,6 +14,11 @@
         android:title="@string/settings"
         app:showAsAction="never" />
     <item
+        android:id="@+id/menu_my_details"
+        android:orderInCategory="100"
+        android:title="@string/my_details"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/menu_logIn"
         android:orderInCategory="100"
         android:title="@string/logIn"
