--- a/app/src/main/res/layout/booking_fragment.xml
+++ b/app/src/main/res/layout/booking_fragment.xml
@@ -1,14 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="false"
+    android:weightSum="1">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="106dp"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <TextView
+            android:layout_width="233dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Welcome to "
+            android:id="@+id/textView14" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Medium Text"
+            android:id="@+id/userIdMeeting"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="139dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Restaurant"
+            android:id="@+id/textView16"
+            android:layout_gravity="right" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/numberParticipants"
+            android:layout_width="156dp"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Place for:" />
+
+        <EditText
+            android:layout_width="68dp"
+            android:layout_height="match_parent"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/numUser"
+            android:text="1"
+            android:layout_weight="0.06" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="49dp"
+        android:orientation="vertical"
+        android:weightSum="1">
+        <CheckBox
+            android:id="@+id/takeAway"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="take away?" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="49dp"
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <TextView
+            android:id="@+id/text10"
+            android:layout_width="112dp"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="In address: " />
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="no enter yet"
+            android:layout_below="@+id/linearLayout" />
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="49dp"
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="In Date:"
+            android:id="@+id/text13"
+            android:layout_weight="0.27" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="In Date:"
+            android:id="@+id/date"
+            android:layout_weight="0.54" />
+
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1">
+            <LinearLayout
+                android:layout_width="183dp"
+                android:layout_height="49dp"
+                android:orientation="horizontal"
+                android:weightSum="1">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Start in: "
+                    android:id="@+id/text14"
+                    android:layout_weight="0.27" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="New Text"
+                    android:id="@+id/startTime"
+                    android:layout_weight="0.27" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:orientation="horizontal"
+                android:weightSum="1">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="End in: "
+                    android:id="@+id/text15"
+                    android:layout_weight="0.27" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="New Text"
+                    android:id="@+id/endTime"
+                    android:layout_weight="0.27" />
+
+            </LinearLayout>
+
+    </LinearLayout>
+
 
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="53dp"
-        android:layout_weight="0.60"
+        android:layout_height="220dp"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -38,101 +208,66 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="55dp">
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.26"
             android:orientation="horizontal"
-            android:id="@+id/linearLayout"
-
-            android:layout_alignParentEnd="true"
             android:weightSum="1">
-
-            <TextView
+            <Button
+                android:id="@+id/menu"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="New Text"
-                android:id="@+id/time"
-                android:layout_weight="0.27" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="New Text"
-                android:id="@+id/date"
-                android:layout_weight="0.27" />
-
+                android:layout_height="68dp"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:text="Go to the menu" />
 
         </LinearLayout>
 
-    </RelativeLayout>
-
-
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="53dp"
-        android:layout_weight="0.21"
-        android:orientation="horizontal"
-        android:weightSum="1">
-
-        <CheckBox
-            android:id="@+id/takeAway"
-            android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:text="take away?"
-            android:layout_weight="0.07" />
-
+        android:layout_height="45dp"
+        android:orientation="horizontal">
         <TextView
-            android:id="@+id/location"
-            android:layout_width="214dp"
-            android:layout_height="63dp"
-            android:text="no enter yet"
-            android:layout_below="@+id/linearLayout" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-
-        android:layout_alignParentEnd="true"
-        android:weightSum="1">
-
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="more details"
-            android:id="@+id/details" />
-
-        <TextView
-            android:id="@+id/numberParticipants"
-            android:layout_width="156dp"
+            android:layout_width="86dp"
             android:layout_height="match_parent"
-            android:text="number of to order:" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
 
-        <EditText
-            android:layout_width="68dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/numUser"
-            android:text="1" />
-
+            android:text="Number of Voters:"
+            android:id="@+id/text16"
+            android:layout_weight="0.09" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/numOfVoters"
+            android:layout_weight="0.15" />
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <RatingBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ratingBar" />
 
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="68dp"
+                android:text="more details on this user"
+                android:id="@+id/details" />
+
+        </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -144,7 +279,7 @@
             android:layout_height="68dp"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@color/common_signin_btn_default_background"
             android:text="Cancel" />
 
         <Button
@@ -158,5 +293,6 @@
 
 
     </LinearLayout>
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
