--- a/app/src/main/res/menu/bookin_menu_list.xml
+++ b/app/src/main/res/menu/bookin_menu_list.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MeetingActivity">
     <item
-        android:id="@+id/menu_back"
+        android:id="@+id/back_to_main"
         android:orderInCategory="100"
         android:title="back"
         app:showAsAction="ifRoom" />
